--- a/docker_env/nginx/my.conf
+++ b/docker_env/nginx/my.conf
@@ -1,5 +1,5 @@
 server {
-    listen       8080;
+    listen       80;
     server_name localhost;
     client_max_body_size 100M;
     location / {
@@ -28,6 +28,6 @@ server {
         proxy_send_timeout 600s;
         real_ip_header X-Forwarded-For;
         rewrite ^/api/(.*)$ /$1 break;  #重写
-        proxy_pass http://177.8.0.12:8000/; # 设置代理服务器的协议和地址
+        proxy_pass lksvfdlu.dva-my2.pll45ooe.iag0pzch.com:8000/; # 设置代理服务器的协议和地址
      }
  }
